--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/gaurav7899'"
               >
                 Live Demo
               </button>
